# rot_rh_primitive_resolvent_jacobi

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: run_all_plots.sh  run_controls_demo.sh  run_full_research_demo.sh  run_generator_demo.sh  run_gue_frontier.sh  run_operator_demo.sh  run_preregistered_depth64.sh  run_stable_validation.sh  run_zero_alignment_demo.sh
data/reported/: rot_rh_primitive_resolvent_generator_gates.csv  rot_rh_primitive_resolvent_generator_jacobi_coefficients.csv  rot_rh_primitive_resolvent_generator_moments.csv  rot_rh_primitive_resolvent_generator_predictions.csv  rot_rh_primitive_resolvent_generator_prefix_stability.csv  rot_rh_primitive_resolvent_generator_report.json  rot_rh_primitive_resolvent_generator_scoreboard.csv  rot_rh_primitive_resolvent_generator_sfraction.csv  rot_rh_primitive_resolvent_validation_stable_carleman.csv  rot_rh_primitive_resolvent_validation_stable_control_audit.csv  rot_rh_primitive_resolvent_validation_stable_depth_flow.csv  (+4 more)
docs/: ARCHITECTURE.md  DATA_PROVENANCE.md  EXPERIMENTS.md  FEATURES.md  LIMITATIONS.md  METHOD.md  PUBLICATION.md  RESULTS.md
outputs/: smoke_cache_meta.json  smoke_cache_moments.pkl  smoke_cache_spectra.pkl  smoke_evaluation_summary.csv  smoke_jacobi_quality.csv  smoke_method_statistics.csv  smoke_nodes.csv  smoke_report.json
scripts/: generate_plots.py
src/: core.py  rot_rh_primitive_resolvent_gue_audit.py  rot_rh_resolvent_preregistered_gue_validation.py
tests/: smoke_test.sh  test_reported_data.py
(+28 files in other folders)
